--- a/src/map-editor/server/package.json
+++ b/src/map-editor/server/package.json
@@ -14,6 +14,7 @@
     "async": "^2.6.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mongodb": "^3.1.1",
     "ws": "^5.2.2"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.11.1",
     "@types/jest": "^22.1.3",
+    "@types/mongodb": "^3.1.2",
     "@types/node": "^9.4.6",
     "@types/ws": "^5.1.2",
     "jest": "^22.0.4",
