--- a/src/map-editor/client/package.json
+++ b/src/map-editor/client/package.json
@@ -18,5 +18,8 @@
     "typescript": "^2.9.2",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
