--- a/src/map-editor/client/tsconfig.json
+++ b/src/map-editor/client/tsconfig.json
@@ -3,6 +3,7 @@
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
+        "moduleResolution": "node",
         "module": "es6",
         "target": "es6",
         "allowJs": true
