--- a/src/map-editor/client/package.json
+++ b/src/map-editor/client/package.json
@@ -11,15 +11,25 @@
   "author": "Camille Hougron <camille.hougron@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "http-server": "^0.11.1",
     "prettier": "^1.13.7",
+    "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.6",
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
