--- a/src/map-editor/client/tsconfig.json
+++ b/src/map-editor/client/tsconfig.json
@@ -6,6 +6,7 @@
         "moduleResolution": "node",
         "module": "es6",
         "target": "es6",
-        "allowJs": true
+        "allowJs": true,
+        "jsx": "react"
     }
 }
