--- a/src/game/client/package.json
+++ b/src/game/client/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^1.1.11",
     "http-server": "^0.11.1",
     "prettier": "^1.13.7",
+    "redux-devtools": "^3.4.1",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
@@ -24,12 +25,15 @@
   "dependencies": {
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.6",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
