--- a/src/game/client/package.json
+++ b/src/game/client/package.json
@@ -16,6 +16,7 @@
     "http-server": "^0.11.1",
     "prettier": "^1.13.7",
     "redux-devtools": "^3.4.1",
+    "redux-devtools-extension": "^2.13.5",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
